--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+.ul-search-list {
+    position: absolute;
+    background-color: white;
+    z-index: 10;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    border-radius: .25rem;
+}
+
+.ul-search-list li {
+    list-style: none;
+}
