--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row justify-content-md-center">
         <div class="col-md-8">
-            <app-todo-input [data]="todos" (addItem)="onItemAdded($event)"></app-todo-input>
-            <app-todo-list [todos]="todos" [newItem]="newItem"></app-todo-list>
+            <app-todo-input></app-todo-input>
+            <app-todo-list></app-todo-list>
         </div>
     </div>
 </div>
