--- a/src/app/components/todo-input/todo-input.component.html
+++ b/src/app/components/todo-input/todo-input.component.html
@@ -1,6 +1,6 @@
 <form (submit)="onSubmit(name)" action="" class=" my-2">
     <div class="input-group mb-3">
-        <input [appSearch]="names" type="text" class="form-control" name="" id="" #name autofocus>
+        <input appSearch type="text" class="form-control" name="" id="" #name autofocus>
         <div class="input-group-append">
             <button type="submit" class="btn btn-outline-secondary">Add todo item</button>
         </div>
