--- a/src/app/components/todo-input/todo-input.component.html
+++ b/src/app/components/todo-input/todo-input.component.html
@@ -1,4 +1,4 @@
-<form (submit)="onSubmit(name)" action="" class=" my-2">
+<form (ngSubmit)="onSubmit(name)" action="" class=" my-2">
     <div class="input-group mb-3">
         <input appSearch type="text" class="form-control" name="" id="" #name autofocus>
         <div class="input-group-append">
